--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
 <head>
-    <title>Ritwik Sinha</title>
+    <title>Hi I'm Ritwik</title>
     <link rel="shortcut icon" type="image/png" href="images/icons/fevicon.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="theme-color" content=#000000>
