update paragraph section

--- a/index.html
+++ b/index.html
@@ -104,14 +104,14 @@
             <h3>Hey there,</h3>
             <p class="about_para">This is Ritwik Sinha from New Delhi, India. I am an Full Stack Developer who develops
                 powerful web application and ML models. Currently, I am pursuing my
-                <b>B. Tech. in Computer Science Technology</b> from <b>Galgotias University.</b>
+                <b>B. Tech. in Computer Science Engineering</b> from <b>Galgotias University.</b>
             </p>
             <p class="about_para">Apart from being a developer, I love to make games with javascript, I have developed
                 many intermediate level games and its source code is live on my github.
                 <!-- <b>LordArcadius</b>. -->
                 I am a senior member on the <a href="https://scriptindia.org/">Script
                     Foundation
-                </a>forum. I have made many full stack wbsites which is used on the hackathons.
+                </a>. I have made many full stack wbsites which is used on the hackathons.
 
             </p>
         </div>
